# psyne

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CHANNEL_PATTERNS.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CORE_DESIGN.md  Doxyfile  ICP_SHARED_MEMORY_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOGGING_FIX.md  MESSAGING.md  Makefile  NOTICE  PERFORMANCE.md  PHILOSOPHY.md  QA_REPORT.md  README.md  README_CLEAN_ARCHITECTURE.md  RELEASE_CHECKLIST_v1.3.0.md  RELEASE_NOTES_v1.2.1.md  ROADMAP.md  TCP_IMPLEMENTATION_GUIDE.md  TDT_COMPRESSION_GUIDE.md  TEST_SUMMARY.md  TRANSPORT_DESIGN.md  cmake_install.cmake  cognithesis-ecosystem.md  minimal_test  run_all_tests.sh  test_results.txt  test_spsc_basic  test_spsc_basic_test
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  simple_ci.yml
benchmarks/: CMakeLists.txt  README.md  all_patterns_test  all_patterns_test.cpp  beast_mode_test  beast_mode_test.cpp  build_benchmarks.sh  comprehensive_all_substrates.cpp  comprehensive_v2_benchmark.cpp  comprehensive_v2_working.cpp  dynamic_allocation_benchmark.cpp  ipc_comparison_benchmark.cpp  latency_benchmark.cpp  messaging_patterns_benchmark.cpp  network_saturation_test.cpp  quick_all_patterns_substrates  quick_all_substrates.cpp  quick_beast_test  quick_beast_test.cpp  run_benchmarks.sh  spsc_corrected_benchmark.cpp  spsc_inprocess_benchmark.cpp  tcp_tdt_benchmark  tcp_tdt_benchmark.cpp  throughput_benchmark.cpp
benchmarks/in-process/: CMakeLists.txt  latency_benchmark.cpp  memory_benchmark.cpp  mpmc_benchmark.cpp  mpsc_benchmark.cpp  scalability_benchmark.cpp  spmc_benchmark.cpp  spsc_benchmark.cpp  throughput_comparison.cpp
benchmarks/protocols/: tdt_compression_benchmark.cpp
bindings/: build_bindings.sh
bindings/csharp/: README.md
bindings/go/: README.md  psyne.go
bindings/java/: .gitignore  README.md  build.gradle  settings.gradle
bindings/javascript/: README.md  binding.gyp  jest.config.js  jest.setup.js  package.json  tsconfig.json
bindings/julia/: JULIA_BINDINGS_SUMMARY.md  Project.toml  README.md
bindings/python/: CMakeLists.txt  README.md  example.py  psyne_bindings.cpp  setup.py
bindings/rust/: Cargo.toml  README.md  build.rs  wrapper.h
bindings/rust/examples/: basic.rs
bindings/rust/src/: lib.rs
cmake/: PsyneConfig.cmake.in  psyne.pc.in
docs/: README.md  api-reference.md  architecture.md  channels.md  collective-operations.md  debug_metrics.md  getting-started.md  overview.md  performance-tuning.md  performance.md  protocols.md  quick-start.md  tdt_attribution.md  unix_sockets.md
examples/: CMakeLists.txt  Makefile  README.md  arrow_demo.cpp  async_messaging_demo.cpp  behaviors_demo.cpp  c_api_demo.c  channel_factory_demo.cpp  channel_patterns_showcase.cpp  clean_architecture_demo.cpp  cmake_install.cmake  collective_demo.cpp  collective_simple_test.cpp  compression_demo.cpp  concept_based_demo.cpp  coroutine_example.cpp  cuda_vector_demo.cpp  custom_allocator_demo.cpp  debug_demo.cpp  debug_multicast.cpp  debug_multicast_simple.cpp  dynamic_allocation_demo.cpp  enhanced_types_demo.cpp  fabric_benchmark.cpp  filtered_fanout_demo.cpp  fixed_size_demo.cpp  future_gpu_example.cpp  gpu_debug_substrate_demo.cpp  gpu_vector_demo.cpp  gpudirect_benchmark.cpp  gpudirect_rdma_demo.cpp  grpc_demo.cpp  high_performance_messaging.cpp  ipc_consumer.cpp  ipc_demo.cpp  ipc_producer.cpp  ipc_test.cpp  message_types_demo.cpp  metal_simple_demo.cpp  metrics_demo.cpp  (+47 more)
examples/basic/: gpu_example.cpp  gpu_example.mm  gpu_vulkan_test.cpp  ipc_example.cpp  layer_communication.cpp  tcp_example.cpp
examples/debug/: metrics_demo.cpp
examples/gpu/: zero_copy_gpu_example.cpp
examples/networking/: build_tcp_examples.sh  simple_tcp_demo.cpp  tcp_client.cpp  tcp_demo.cpp  tcp_demo_test.cpp  tcp_server.cpp
examples/patterns/: data_parallel_broadcast.cpp  gradient_aggregation.cpp  gradient_aggregation_simple.cpp
examples/protocols/: protocol_demo.cpp  tdt_compression_demo.cpp
examples/webrtc-browser-game/: package.json  server.js
examples/webrtc-browser-game/peerjs-version/js/: main.js  peerjs-manager.js
examples/webrtc-browser-game/public/: index.html
examples/webrtc-browser-game/public/js/: combat-system.js  game-engine.js  gossip-protocol.js  main.js  webrtc-manager.js
examples/webrtc-browser-game/streaming-example/: README.md  package.json  server.js
scripts/: build_windows.bat  check_zero_copy.sh  format.sh  generate_docs.sh  zero_copy_check.sh  zero_copy_summary.sh
src/: README.md  collective.hpp  psyne.cpp  psyne_impl.hpp  psyne_lib.cpp  psyne_minimal.cpp  tcp_protocol.cpp
src/collective/: CMakeLists.txt  collective.cpp  collective_impl.cpp
src/gpu/: CMakeLists.txt  GPUBuffer.hpp  GPUComputeJob.hpp  GPUFunction.hpp  GlobalFunctionRegistry.hpp  PipelineManager.hpp  ShaderBuffer.hpp  ShaderBufferRing.hpp  Shaders.hpp  VulkanContext.hpp  Wrapper.h  gpu_buffer.hpp  gpu_context.cpp  gpu_message.cpp  gpu_message.hpp  gpudirect_message.cpp  gpudirect_message.hpp  metal_backend.hpp  metal_backend.mm
src/gpu/cuda/: cuda_buffer.cpp  cuda_buffer.hpp  cuda_context.cpp  cuda_kernels.cu  cuda_kernels.hpp
src/gpu/metal/: metal_buffer.cpp  metal_buffer.hpp
src/gpu/metal/shaders/: compute_kernels.metal
src/gpu/vulkan/: vulkan_buffer.cpp  vulkan_buffer.hpp
tests/: CMakeLists.txt  README.md  basic_test.cpp  channel_test.cpp  compression_encryption_test.cpp  integration_test.cpp  memory_leak_test.cpp  memory_profiling_benchmark.cpp  message_test.cpp  minimal_test.cpp  multi_core_benchmark.cpp  performance_benchmark.cpp  performance_test.cpp  psyne_tests.cpp  rpc_stress.cpp  simple_memory_test.cpp  simple_stress_test.cpp  simple_test.cpp  tcp_test.cpp  test_all_patterns.cpp  test_basic_functionality.cpp  test_fixtures.hpp  test_gpu_substrate.cpp  test_ipc_substrate.cpp  test_mpmc_simple.cpp  test_no_boost.cpp  test_simple_channel.cpp  test_spsc_basic.cpp  test_tcp_substrate.cpp  test_tcp_working.cpp  test_windows.cpp  zero_copy_verification_test.cpp
tools/: psyne_monitor.cpp
(+317 files in other folders)
